[package]
name = "leptos-classes"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
authors = ["Lukas Potthast <privat@lukas-potthast.de>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/lpotthast/leptos-classes"
description = "Prop-drillable, reactive class container for Leptos."
categories = ["web-programming", "gui", "wasm"]
keywords = ["leptos", "class", "classes", "reactive", "props"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[features]
default = []
nightly = ["leptos/nightly"]

[dependencies]
leptos = "0.8.17"
reactive_graph = "0.2.13"
smallvec = "1"
tracing = "0.1.44"

[dev-dependencies]
assertr = { version = "0.5.0", default-features = false, features = ["std"] }
leptos = { version = "0.8.17", features = ["csr", "hydrate"] }

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
anyhow = { version = "1.0.102", default-features = false, features = ["std"] }
async-trait = { version = "0.1.89", default-features = false, features = [] }
chrome-for-testing-manager = { version = "0.7.1", default-features = false, features = ["thirtyfour"] }
thirtyfour = { version = "0.36.1", default-features = false, features = ["component", "reqwest", "rustls-tls"] }
tokio = { version = "1.50.0", default-features = false, features = ["macros", "rt", "rt-multi-thread", "time"] }
tokio-process-tools = { version = "0.8.1", default-features = false, features = [] }
tracing-subscriber = { version = "0.3.23", default-features = false, features = ["ansi", "fmt", "registry"] }

[lints.rust]
missing_docs = "warn"

[lints.clippy]
pedantic = "warn"
